Adicionado relatório HTML

--- a/h6_sazonalidade_dia/h6_sazonalidade.ipynb
+++ b/h6_sazonalidade_dia/h6_sazonalidade.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "<>:3: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "<>:3: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "C:\\Users\\mf_gu\\AppData\\Local\\Temp\\ipykernel_9452\\849380308.py:2: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "  df_carrinhos = pd.read_csv(\"_data\\clean\\e_commerce_carrinhos.csv\")\n",
+      "C:\\Users\\mf_gu\\AppData\\Local\\Temp\\ipykernel_9452\\849380308.py:3: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "  df_clientes = pd.read_csv(\"_data\\clean\\e_commerce_clientes.csv\")\n",
+      "C:\\Users\\mf_gu\\AppData\\Local\\Temp\\ipykernel_9452\\849380308.py:4: SyntaxWarning: invalid escape sequence '\\c'\n",
+      "  df_pedidos = pd.read_csv(\"_data\\clean\\e_commerce_pedidos.csv\")\n"
+     ]
+    }
+   ],
    "source": [
     "#criando os dfs\n",
     "df_carrinhos = pd.read_csv(\"_data\\clean\\e_commerce_carrinhos.csv\")\n",
@@ -35,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +331,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +631,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -724,6 +743,64 @@
     "    print(\"Rejeitamos a hipótese nula: há evidência de sazonalidade nos dias da semana.\")\n",
     "else:\n",
     "    print(\"Não rejeitamos a hipótese nula: não há evidência de sazonalidade nos dias da semana.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estatística qui-quadrado: 12.820512820512823\n",
+      "p-valor: 0.045976432442388006\n",
+      "  dia_semana  contagem  Frequência Esperada  Diferença Absoluta  \\\n",
+      "0     Friday         5            11.142857           -6.142857   \n",
+      "1     Monday        12            11.142857            0.857143   \n",
+      "2   Saturday         7            11.142857           -4.142857   \n",
+      "3     Sunday         7            11.142857           -4.142857   \n",
+      "4   Thursday        18            11.142857            6.857143   \n",
+      "5    Tuesday        14            11.142857            2.857143   \n",
+      "6  Wednesday        15            11.142857            3.857143   \n",
+      "\n",
+      "   Percentual de Diferença  \n",
+      "0               -55.128205  \n",
+      "1                 7.692308  \n",
+      "2               -37.179487  \n",
+      "3               -37.179487  \n",
+      "4                61.538462  \n",
+      "5                25.641026  \n",
+      "6                34.615385  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcular o total de pedidos\n",
+    "total_pedidos = df_pedidos_unicos.shape[0]\n",
+    "\n",
+    "# Frequência esperada por dia da semana (assumindo distribuição uniforme)\n",
+    "frequencia_esperada = total_pedidos / len(dias_da_semana)\n",
+    "frequencias_esperadas = [frequencia_esperada] * len(dias_da_semana)\n",
+    "\n",
+    "# Contagens observadas por dia da semana\n",
+    "contagens_observadas = contagem_por_dia['contagem'].tolist()\n",
+    "\n",
+    "# Realizar o teste qui-quadrado para a distribuição global\n",
+    "chi2, p_valor = stats.chisquare(contagens_observadas, f_exp=frequencias_esperadas)\n",
+    "\n",
+    "# Resultados\n",
+    "print(f\"Estatística qui-quadrado: {chi2}\")\n",
+    "print(f\"p-valor: {p_valor}\")\n",
+    "\n",
+    "# Preparar resultados detalhados\n",
+    "resultados_df = contagem_por_dia.copy()\n",
+    "resultados_df['Frequência Esperada'] = frequencias_esperadas\n",
+    "resultados_df['Diferença Absoluta'] = resultados_df['contagem'] - resultados_df['Frequência Esperada']\n",
+    "resultados_df['Percentual de Diferença'] = (resultados_df['Diferença Absoluta'] / resultados_df['Frequência Esperada']) * 100\n",
+    "\n",
+    "print(resultados_df)"
    ]
   }
  ],
@@ -743,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
