--- a/h6_sazonalidade_dia/h6_sazonalidade_dia.qmd
+++ b/h6_sazonalidade_dia/h6_sazonalidade_dia.qmd
@@ -2,7 +2,7 @@
 title: "H6 - Enfrentamos sazonalidades conforme o dia da semana"
 output: 
   html_document:
-    self_contained: true
+    embed-resources: true
 ---
 
 # Teste de hipóteses
