Inserindo decimal=',' e embed-resources: true

--- a/h8_ticket_medio/h8_analise.ipynb
+++ b/h8_ticket_medio/h8_analise.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,37 +204,37 @@
        "3  BRACELETE AJUSTÁVEL O COM COROA  DFREFSP8P           1  ...   \n",
        "4  BRACELETE AJUSTÁVEL O COM COROA  DFREFSP8P           1  ...   \n",
        "\n",
-       "            entrega_cidade    entrega_estado entrega_cep  utm_source  \\\n",
-       "0                 Brasilia  Distrito Federal    72455490         NaN   \n",
-       "1  Varzea Nova(Santa Rita)           Paraiba    58304500         NaN   \n",
-       "2  Varzea Nova(Santa Rita)           Paraiba    58304500         NaN   \n",
-       "3  Varzea Nova(Santa Rita)           Paraiba    58304500         NaN   \n",
-       "4  Varzea Nova(Santa Rita)           Paraiba    58304500         NaN   \n",
+       "            entrega_cidade    entrega_estado  entrega_cep utm_source  \\\n",
+       "0                 Brasilia  Distrito Federal     72455490        NaN   \n",
+       "1  Varzea Nova(Santa Rita)           Paraiba     58304500        NaN   \n",
+       "2  Varzea Nova(Santa Rita)           Paraiba     58304500        NaN   \n",
+       "3  Varzea Nova(Santa Rita)           Paraiba     58304500        NaN   \n",
+       "4  Varzea Nova(Santa Rita)           Paraiba     58304500        NaN   \n",
        "\n",
-       "   utm_campaign  utm_medium utm_content utm_term customizacao  id_cliente  \n",
-       "0           NaN         NaN         NaN      NaN          NaN  31d69aed10  \n",
-       "1           NaN         NaN         NaN      NaN          NaN  3e109eedd5  \n",
-       "2           NaN         NaN         NaN      NaN          NaN  3e109eedd5  \n",
-       "3           NaN         NaN         NaN      NaN          NaN  3e109eedd5  \n",
-       "4           NaN         NaN         NaN      NaN          NaN  3e109eedd5  \n",
+       "   utm_campaign utm_medium  utm_content  utm_term customizacao  id_cliente  \n",
+       "0           NaN        NaN          NaN       NaN          NaN  31d69aed10  \n",
+       "1           NaN        NaN          NaN       NaN          NaN  3e109eedd5  \n",
+       "2           NaN        NaN          NaN       NaN          NaN  3e109eedd5  \n",
+       "3           NaN        NaN          NaN       NaN          NaN  3e109eedd5  \n",
+       "4           NaN        NaN          NaN       NaN          NaN  3e109eedd5  \n",
        "\n",
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pandas import DataFrame, read_csv, to_datetime, concat\n",
+    "from pandas import read_csv, to_datetime\n",
     "from os import path\n",
     "\n",
-    "datadir = 'C:/Users/User/Desktop/data_science/mentoria_data_mundo/projeto_ecommerce/_data/clean'\n",
+    "datadir = '/home/iagonmic/data_science/ecommerce-joias/_data/clean'\n",
     "\n",
-    "df_clientes = read_csv(path.join(datadir, 'e_commerce_clientes.csv'))\n",
-    "df_carrinhos = read_csv(path.join(datadir, 'e_commerce_carrinhos.csv'))\n",
-    "df_pedidos = read_csv(path.join(datadir, 'e_commerce_pedidos.csv'))\n",
+    "df_clientes = read_csv(path.join(datadir, 'e_commerce_clientes.csv'), decimal=',')\n",
+    "df_carrinhos = read_csv(path.join(datadir, 'e_commerce_carrinhos.csv'), decimal=',')\n",
+    "df_pedidos = read_csv(path.join(datadir, 'e_commerce_pedidos.csv'), decimal=',')\n",
     "\n",
     "df_pedidos.drop(columns=['Unnamed: 0']).reset_index(drop=True).head()"
    ]
@@ -912,7 +912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
